Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12516

QuickDesigner: Updating the preview for setting colors to transparent fails for implicit color

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 3.2.0-rc1
    • Qt Creator 3.2.0-beta1
    • Quick Designer
    • None
    • Ubuntu 12.04 32bit, Qt Creator 3.2 (master) based on Qt5.3
    • 9b6f9dfb894a8a7ea802aa32dbd187d745dece93

      Steps to reproduce:

      • create/open Qt Quick UI / Application, switch to Design mode
      • drag a Rectangle onto the preview
      • increment the border width of the Rectangle (border has a default color of black - not implicitly set)
      • switch border color to transparent
        • preview is not updated
      • switch back to solid color
        • change/explicitly set a color
      • switch to transparent mode and back to solid
        • preview is updated

      Expected result:

      • even for colors that aren't set explicitly transparency is updated inside the preview

        For Gerrit Dashboard: QTCREATORBUG-12516
        # Subject Branch Project Status CR V

            thohartm Thomas Hartmann
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes