QmlDesigner.PropertyEditor: Fix comparison of variants

The comparison of variants is not symmetric because of implicit conversion.
QVariant(string) == QVariant(QColor) does for example ignore the
alpha channel, because the color is converted to a string ignoring
the alpha channel. By comparing the variants in both directions we
gain a symmetric comparison.

Task-number: QTCREATORBUG-12516
Change-Id: I2d7ce29c087964626c8093b25667f3f4a11f6da4
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>